# yugioh-api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/routers/: cards_router.rs  mod.rs
src/tools/: card_client.rs  debug_tools.rs  mod.rs  response.rs
