[package]
name = "yu-gi-oh-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
lazy-regex = "3"
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }
mongodb = "3.1.0"
futures = "0.3.31"
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
